
Version 0.31
* added option "Toolbar button style"
* added option "Mouse wheel scroll lines"
* added test for minimal Qt version
* added Arabic translation (abouzakaria kov)
* using c++11 for source code
* fixed Qt 5.4 support
* updated Russian translation
* updated Bulgarian translation (Kiril Kirilov)
* updated Dutch (Netherlands) translation (Heimen Stoffels)
* updated Chinese (Taiwan) translation (Jeff Huang)
* updated German translation (Ettore Atalan)
* updated Serbian translation (markosm)
* updated Czech translation (fri)

Version 0.32
* added global menu support
* updated Czech translation (fri)
* updated Greek translation (Dimitrios Glentadakis)
* updated Russian translation

Version 0.33
* fixed build without dbus support (coacher)
* fixed Qt 5.6 support (coacher)
* updated Hebrew translation (Elkana Birdugo)

Version 0.34
* added feature to disable shortcut underlines
* added Danish translation (scootergrisen)
* improved global menu checking
* improved XDG support
* fixed font settings
* fixed Qt 5.5 support
* updated Russian translation
* updated Czech translation (fri)
* updated Dutch (Netherlands) translation (Heimen Stoffels)
* updated Chinese (Taiwan) translation (Jeff Huang)
* updated German translation (Ettore Atalan)
* updated Italian translation (Luigi Baldoni)
* updated Bulgarian translation (Kiril Kirilov)
* updated Greek translation (Dimitrios Glentadakis)

Version 0.35
* added color themes and style scheets from Lumina project
* added feature to use GTK/KDE dialogs (requires Qt 5.9 or higher)
* added feature to copy style sheets
* added some error messages
* fixed style sheet list editing
* updated Russian translation
* updated Greek translation (Dimitrios Glentadakis)
* updated Dutch (Netherlands) translation (Heimen Stoffels)
* updated German translation (Ettore Atalan)
* updated Danish translation (scootergrisen)
* updated Chinese (Taiwan) translation (Jeff Huang)
* updated Bulgarian translation (Kiril Kirilov)