@@ -249,3 +249,4 @@ Version 0.35
 * updated Danish translation (scootergrisen)
 * updated Chinese (Taiwan) translation (Jeff Huang)
 * updated Bulgarian translation (Kiril Kirilov)
+* updated Czech translation (fri)
